AM_CFLAGS = -Wall -Werror -ggdb -I./Y1731/src
AM_LDFLAGS =

bin_PROGRAMS = ethping ethtrace dot1agd dot1ag_ccd

ethping_SOURCES = \
	ethping.c \
	ieee8021ag.c \
	ieee8021ag.h \
	dot1ag_eth.c \
	dot1ag_eth.h \
	oam_db.c \
	oam_db.h \
	oam_entity.h

ethtrace_SOURCES = \
	ethtrace.c \
	ieee8021ag.c \
	ieee8021ag.h \
	dot1ag_eth.c \
	dot1ag_eth.h \
	oam_db.c \
	oam_db.h \
	oam_entity.h

dot1agd_SOURCES = \
	dot1agd.c \
	ieee8021ag.c \
	ieee8021ag.h \
	dot1ag_eth.c \
	dot1ag_eth.h \
	oam_db.c \
	oam_db.h \
	oam_entity.h \
	Y1731/src/eth_slm.c \
	Y1731/src/eth_slm.h \
	Y1731/src/eth_slr.c \
	Y1731/src/eth_slr.h

dot1ag_ccd_SOURCES = \
	dot1ag_ccd.c \
	ieee8021ag.c \
	ieee8021ag.h \
	dot1ag_eth.c \
	dot1ag_eth.h \
	oam_db.c \
	oam_db.h \
	oam_entity.h \
	Y1731/src/eth_slm.c \
	Y1731/src/eth_slm.h \
	Y1731/src/eth_slr.c \
	Y1731/src/eth_slr.h
